Update GameLauncher.java