@@ -19,6 +19,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
+import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
@@ -429,7 +430,7 @@ public class GameLauncher {
         return value.replace("\\", "\\\\").replace("\"", "\\\"");
     }
 
-    private void ouvrirPageWebAvecBridge(String target) {
+    private void ouvrirPageWebAvecBridge(String target) throws UnsupportedEncodingException {
         String token = demanderBridgeToken();
         if (token == null || token.isEmpty()) {
             JOptionPane.showMessageDialog(
@@ -441,8 +442,8 @@ public class GameLauncher {
         }
 
         String url = BRIDGE_LOGIN_URL
-                + "?token=" + URLEncoder.encode(token, StandardCharsets.UTF_8)
-                + "&target=" + URLEncoder.encode(target, StandardCharsets.UTF_8);
+                + "?token=" + URLEncoder.encode(token, StandardCharsets.UTF_8.name())
+                + "&target=" + URLEncoder.encode(target, StandardCharsets.UTF_8.name());
         ouvrirPageWeb(url);
     }
 
